--- a/FIR_Filter_2/Python/FIR_Doku_2.ipynb
+++ b/FIR_Filter_2/Python/FIR_Doku_2.ipynb
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fouriertransformation der Signal\n",
+    "## Fouriertransformation der Signale\n",
     "\n",
     "Für die Fouriertransformationen wurde die Bibliothek **scipy** mit dem Packet **fftpack** importiert. Sie erlaubt uns das Frequenzspektrum der Signale genauer zu erkennen und besser zu interpretieren."
    ]
@@ -230,7 +230,7 @@
     "2. EKG-Signal mit hochfrequenten Störungen\n",
     "3. EKG-Signal nach dem FPGA\n",
     "\n",
-    "Die künstlich hinzugefügten Frequenzen sind immernoch vorhanden, doch wesentlich stärker als zuvor gedämpft. Noch erkennbar ist, dass unser Nutzspektrum sich ebenfalls durch Berechnungen Phasenverschiebungen sich verändert hat."
+    "Die künstlich hinzugefügten Frequenzen sind immernoch vorhanden, doch wesentlich stärker als zuvor gedämpft. Noch erkennbar ist, dass unser Nutzspektrum sich ebenfalls durch Berechnungen und Phasenverschiebungen sich verändert hat."
    ]
   },
   {
@@ -352,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wenn der Wert jetzt entnommen wird und nochmal nach dem Maximum gesucht, dann komm ca. 3.2 raus. Das ist unser 50 Hz Wechselspannung, die sich in das System mit eingliedert"
+    "Wenn der Wert jetzt entnommen und nochmal nach dem Maximum gesucht wird, dann komm ca. 3.2 raus. Das ist unser 50 Hz Wechselspannung, die sich in das System mit eingliedert"
    ]
   },
   {
